--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "vfb-league",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://victor77dev.github.io/vfb-league",
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0-rc.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -17,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "node scripts/deploy.mjs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
