--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "dotenv": "^16.0.2",
+    "jsdom": "^20.0.0",
+    "node-fetch": "^3.2.10",
+    "pdfjs-dist": "2.10.377"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "node scripts/deploy.mjs",
+    "updateMatch": "node scripts/update-match.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
