--- a/.github/workflows/update-match.yml
+++ b/.github/workflows/update-match.yml
@@ -7,6 +7,8 @@ on:
         description: 'Message'
         required: true
         default: 'updating'
+  schedule:
+    - cron: "*/5 * * * *"
 
 env:
   NODE_VERSION: '16.x'
