Add supabase link

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ env:
   REACT_APP_YOUTUBE_API_KEY: ${{ secrets.REACT_APP_YOUTUBE_API_KEY }}
   REACT_APP_YOUTUBE_CLIENT_ID: ${{ secrets.REACT_APP_YOUTUBE_CLIENT_ID }}
   REACT_APP_YOUTUBE_CLIENT_SECRET: ${{ secrets.REACT_APP_YOUTUBE_CLIENT_SECRET }}
+  SUPABASE_PROJECT_DB_KEY: ${{ secrets.SUPABASE_PROJECT_DB_KEY }}
+  SUPABASE_PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF }}
   GITHUB_ACTOR_EMAIL: ${{ github.event.head_commit.committer.email }}
 
 jobs:
