--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,3 +53,6 @@ jobs:
 
       - name: Deploy
         run: npm run deploy
+
+      - name: Deploy Edge Function
+        run: npm run deployEdgeFunction
