Add updateAll & updatePlayer workflow

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "build": "react-scripts build",
     "deploy": "node scripts/deploy.mjs",
     "deployEdgeFunction": "node scripts/edgeFunction.mjs",
-    "updateMatch": "node scripts/update-match.js",
+    "updateMatch": "node scripts/update-info.js match",
+    "updatePlayer": "node scripts/update-info.js player",
+    "updateAll": "node scripts/update-info.js all",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
