--- a/.github/workflows/update-match.yml
+++ b/.github/workflows/update-match.yml
@@ -8,7 +8,7 @@ on:
         required: true
         default: 'updating'
   schedule:
-    - cron: "0 0 * * 1"
+    - cron: "0 0 * * *"
 
 env:
   NODE_VERSION: '16.x'
